# Chat

./: .gitignore  AuthData.cpp  AuthData.h  CMakeCache.txt  CMakeLists.txt  Chat.cpp  Chat.h  Client.cpp  Client.h  Connection.cpp  Connection.h  ContainerHandler.cpp  DataBase.h  DefaultHandler.cpp  Errors.h  FileIO.h  FileReader.cpp  FileWriter.cpp  InOut.h  Logger.cpp  Logger.h  Makefile  Message.cpp  Message.h  MyMakefile  OS_info.h  README.md  SQLdataBase.cpp  SQLdataBase.h  Server.cpp  Server.h  StartData.h  chat  chat.out  cmake_build.sh  createTables.txt  ip.txt  main.cpp  messages.txt  users.txt
